[package]
name = "rhttp"
version = "0.1.0"
authors = ["Peter Aba <peter@peteraba.com>"]
edition = "2018"

[lib]
name = "rhttp"
crate-type = ["cdylib"]

[dependencies]
aes-soft = "0.4.0"
base64 = "0.12.1"
block-modes = "0.4.0"
hex = "0.4.2"
hex-literal = "0.2.1"
http = "0.2.1"
libc = "0.2.71"
reqwest = { version = "0.10.6", features = ["blocking"] }
sha2 = "0.8.2"
sha3 = "0.8.2"
