[package]
name = "rhttp"
version = "0.1.0"
authors = ["Peter Aba <peter@peteraba.com>"]
edition = "2018"

[lib]
name = "rhttp"
crate-type = ["cdylib"]

[dependencies]
aes-soft = "0.6.4"
base64 = "0.13.0"
block-modes = "0.7.0"
hex = "0.4.2"
http = "0.2.1"
libc = "0.2.82"
reqwest = { version = "0.11.0", features = ["blocking"] }
sha2 = "0.9.2"
sha3 = "0.9.1"
libflate = "1.0.3"